--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "firebase": "^12.8.0",
     "peerjs": "^1.5.5",
     "pinia": "^3.0.4",
-    "vue": "^3.5.24"
+    "vue": "^3.5.24",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
