--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@dicebear/collection": "^9.3.1",
     "@dicebear/core": "^9.3.1",
+    "@types/canvas-confetti": "^1.9.0",
+    "@types/three": "^0.182.0",
+    "canvas-confetti": "^1.9.4",
     "firebase": "^12.8.0",
     "peerjs": "^1.5.5",
     "pinia": "^3.0.4",
+    "three": "^0.182.0",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
   },
